<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/typeSelectionFlashcard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/JumbleWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:textSize="16sp"
            android:fontFamily="@font/droidsans_bold"
            android:text="@string/JumbleWord" />

        <RadioButton
            android:id="@+id/StartToEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:fontFamily="@font/droidsans_bold"
            android:text="@string/StartToEnd" />

        <RadioButton
            android:id="@+id/EndToStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:fontFamily="@font/droidsans_bold"
            android:text="@string/EndToStart" />

        <RadioButton
            android:id="@+id/Spaced_repetition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:fontFamily="@font/droidsans_bold"
            android:text="@string/Spaced_repetition" />

        <RadioButton
            android:id="@+id/Saved_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:fontFamily="@font/droidsans_bold"
            android:text="@string/Saved_word" />
    </RadioGroup>


    <Button
        android:id="@+id/start_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/droidsans_bold"
        android:text="@string/Start"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>
